objects/pse__Billing_Event_Batch__c.object
<CustomObject>
    <customHelpPage>pse__BillingEventBatchHelp</customHelpPage>
    <description>Contains one or more billing events, grouped together based on various fields and factors, generated at the region, practice, or group level and released for invoicing at the batch or billing events level. Generate, release, or remove billing event batches on the Billing Event Generation tab.</description>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Event Batches</relationshipLabel>
        <relationshipName>Billing_Event_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Key__c</fullName>
        <description>Generated key to identify a Billing Event Batch. Contains concatenation of Generation Time (when appendGeneratedItems = false), Account__c, CurrencyIsoCode, and Time_Period__c.</description>
        <externalId>true</externalId>
        <label>Batch Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event Calculation</label>
        <referenceTo>pse__Billing_Event_Calculation__c</referenceTo>
        <relationshipLabel>Billing Event Batches</relationshipLabel>
        <relationshipName>Billing_Event_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Billing Event Batches</relationshipLabel>
        <relationshipName>Billing_Event_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Is_Released__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contains true if all billing events in this batch are released.</description>
        <label>Released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Billing Event Batches</relationshipLabel>
        <relationshipName>Billing_Event_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Billing Event Batches</relationshipLabel>
        <relationshipName>Billing_Event_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Summary_Amount__c</fullName>
        <description>Total of all billing event summary amounts in this batch</description>
        <label>Summary Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Billing Event Batches</relationshipLabel>
        <relationshipName>Billing_Event_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Event Batch</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Account__c</columns>
        <columns>pse__Summary_Amount__c</columns>
        <columns>pse__Time_Period__c</columns>
        <columns>pse__Is_Released__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BEB-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Event Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>